2008-06-13  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (ppc_cpu): Use ppc_cpu_t typedef.
	(ppc_insert_operand): Likewise.
	(ppc_machine): Likewise.
	* config/tc-ppc.h: #include "opcode/ppc.h"
	(struct _ppc_fix_extra <ppc_cpu>): Use ppc_cpu_t typedef.
	(ppc_cpu): Update extern decl.

2008-06-12  Adam Nemet  <anemet@caviumnetworks.com>

	* config/tc-mips.c (validate_mips_insn): Handle field descriptors
	+x, +X, +p, +P, +s, +S.
	(mips_ip): Likewise.

	* config/tc-mips.c (validate_mips_insn): Handle field descriptor +Q.
	(mips_ip): Likewise.
	(macro_build): Likewise.
	(CPU_HAS_SEQ): New macro.
	(macro2) <M_SEQ_I, M_SNE_I>: Use it.  Emit seq/sne and seqi/snei.

2008-06-09  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (mcu_types): Remove support for ATmega32HVB device.
	* doc/c-avr.texi: Likewise.

2008-06-04  Nick Clifton  <nickc@redhat.com>

	* app.c (do_scrub_chars): Do not UNGET an EOF value.

2008-06-03  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (set_sse_check): New.
	(md_pseudo_table): Add "sse_check".

2008-06-03  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_t_rbit): Populate both rm fields.

2008-05-30  Nick Clifton  <nickc@redhat.com>

	PR 5523
	* config/tc-avr.c (avr_ldi_expression): Do not warn about unknown
	relocs here.

2008-05-29  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* config/tc-mips.c (mips_cpu_info_table): Move records for
	ST Loongson-2E/2F processors to a better place.

2008-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/6518
	* config/tc-i386.c (match_template): Report ambiguous operand
	size, not invalid suffix when there is no match in Intel
	syntax.

2008-05-22  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (parse_cond): Covert to lowercase before matching.

2008-05-21  I-Jui Sung  <ijsung@gmail.com>

	* config/tc-arm.c (arm_cpus): Add Faraday ARMv4 and ARMv5TE
	compatible cores: fa526, fa626, fa626te, fa726te.